--- a/archive.html
+++ b/archive.html
@@ -8,21 +8,18 @@ title: Blog Archive
     <div class="bg-white border border-gray-200 p-6 md:p-10">
       <header class="mb-8 border-b border-gray-200 pb-6">
         <h1 class="text-3xl md:text-4xl font-bold text-gray-900 leading-tight mb-2">Blog Archive</h1>
-        <p class="text-gray-600 font-sans">All posts organized by category and date.</p>
+        <p class="text-gray-600 font-sans">All posts organized by category.</p>
       </header>
 
-      {% assign posts_by_year = site.posts | group_by_exp: "post", "post.date | date: '%Y'" %}
-      
-      {% for year in posts_by_year %}
-      <div class="mb-10">
-        <h2 class="text-2xl font-bold text-gray-800 mb-4 font-sans border-b-2 border-primary pb-2 inline-block">{{ year.name }}</h2>
+      {% for category in site.categories %}
+      <div class="mb-10" id="{{ category[0] | slugify }}">
+        <h2 class="text-2xl font-bold text-gray-800 mb-4 font-sans border-b-2 border-primary pb-2 inline-block">{{ category[0] }}</h2>
         <ul class="space-y-4">
-          {% for post in year.items %}
+          {% for post in category[1] %}
           <li class="flex flex-col md:flex-row md:items-center gap-2 md:gap-4 p-4 bg-surface border border-gray-200 hover:border-primary transition-colors">
             <span class="text-sm font-sans text-gray-500 md:w-32 shrink-0">{{ post.date | date: "%b %-d, %Y" }}</span>
             <div class="flex-1">
               <a href="{{ post.url | relative_url }}" class="text-lg font-bold text-link hover:underline">{{ post.title }}</a>
-              <span class="text-xs font-sans font-bold uppercase text-primary ml-2">{{ post.category | default: post.tags | first | default: "Security" }}</span>
             </div>
           </li>
           {% endfor %}
@@ -42,6 +39,3 @@ title: Blog Archive
   
   {% include sidebar.html %}
 </div>
-
-
-
